--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>TechUltra资源网</title>
+    <title>TechUltra资源网（测试版本）</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/header.css">
