--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li><a href="#" target="_blank">web前端</a>
                             <ul>
                                 <li><a href="#" target="_blank">js作业导航</a></li>
-                                <li><a href="#" target="_blank">web前端实训</a></li>
+                                <li><a href="https://rhinvacation.github.io/web_shi_xun/" target="_blank">web前端实训</a></li>
                             </ul>
                         </li>
                         <li><a href="#" target="_blank">网络与数据库</a>
