--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <ul>
                         <li><a href="#" target="_blank">web前端</a>
                             <ul>
-                                <li><a href="#" target="_blank">js作业导航</a></li>
+                                <li><a href="https://rhinvacation.github.io/javascript_index_double_version/" target="_blank">JavaScript作业</a></li>
                                 <li><a href="https://rhinvacation.github.io/web_shi_xun/" target="_blank">web前端实训</a></li>
                             </ul>
                         </li>
