--- a/About_us.html
+++ b/About_us.html
@@ -34,8 +34,8 @@
                     <ul>
                         <li><a href="#" target="_blank">web前端</a>
                             <ul>
-                                <li><a href="#" target="_blank">js作业导航</a></li>
-                                <li><a href="#" target="_blank">web前端实训</a></li>
+                                <li><a href="https://rhinvacation.github.io/javascript_index_double_version/" target="_blank">JavaScript作业</a></li>
+                                <li><a href="https://rhinvacation.github.io/web_shi_xun/" target="_blank">web前端实训</a></li>
                             </ul>
                         </li>
                         <li><a href="#" target="_blank">网络与数据库</a>
